# Remote_Surveillance_Robot

./: README.md  package.xml  remote_surveillance.world
src/surveillance_robot_description/: CMakeLists.txt  package.xml
src/surveillance_robot_description/launch/: display.launch.py  gazebo.launch.py  robot_launch.py
src/surveillance_robot_description/urdf/: robot.urdf
